--- a/circuits/package.json
+++ b/circuits/package.json
@@ -6,5 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "circomlib": "^2.0.3",
+    "circomlibjs": "^0.1.2",
+    "snarkjs": "^0.4.15",
+    "zkey-manager": "^0.1.2"
+  }
 }
