--- a/circuits/package.json
+++ b/circuits/package.json
@@ -4,6 +4,9 @@
   "description": "contains circuits",
   "main": "build/index.js",
   "scripts": {
+    "zkey-compile": "zkey-manager compile -c ./zkeys.config.yml",
+    "zkey-downloadPtau": "zkey-manager downloadPtau -c ./zkeys.config.yml",
+    "zkey-genZkeys": "zkey-manager genZkeys -c ./zkeys.config.yml",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "ISC",
