--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+      "es2020": true,  // <- activate “es2020” globals
+      "browser": true,
+      "node": true,
+      "mocha": true
+    }
 }
