--- a/web/package.json
+++ b/web/package.json
@@ -2,20 +2,41 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "next": "12.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "ethers": "^5.6.2",
+    "merkletreejs": "^0.2.31",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^2.1.4",
+    "zkp-merkle-airdrop-lib": "file:zkp-merkle-airdrop-lib"
   },
-  "devDependencies": {
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.1"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
