--- a/web/package.json
+++ b/web/package.json
@@ -8,12 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "ethers": "^5.6.2",
-    "merkletreejs": "^0.2.31",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^2.1.4",
-    "zkp-merkle-airdrop-lib": "file:zkp-merkle-airdrop-lib"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
