--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "web/zkp-merkle-airdrop-lib"]
-	path = web/zkp-merkle-airdrop-lib
+[submodule "web/merkle-lib"]
+	path = web/merkle-lib
 	url = https://github.com/a16z/zkp-merkle-airdrop-lib
