--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "circomlib": "^0.0.5",
     "ethers": "^5.6.2",
     "merkletreejs": "^0.2.31",
     "react": "^17.0.2",
